--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -616,3 +616,33 @@ a {
   cursor: pointer;
   margin-top: 20px;
 }
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  width: 89%;
+  margin: 30px auto;
+}
+
+.footer__last {
+  position: relative;
+}
+
+.footer__last::before {
+  content: '';
+  position: absolute;
+  background: #333;
+  height: 1px;
+  width: 89.2%;
+  left: 5%;
+  top: 0;
+}
+
+.footer-info {
+  margin-top: 30px;
+}
+
+.footer-info span {
+  color: #333;
+  font-size: 14px;
+}
